syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.stats";
option java_outer_classname = "StatisticsProto";


message GetStatsRequest {}
message GetStatsResponse {
  int64 total_customers = 1;
  string last_event_message = 2;
}

message CalculateRatingRequest {
  int64 rental_id = 1;
  double total_cost = 2;
}

message CalculateRatingResponse {
  int64 rental_id = 1;
  int32 score = 2;
  string level = 3;
}

service StatisticsService {
  rpc GetGeneralStats(GetStatsRequest) returns (GetStatsResponse) {}

  rpc CalculateRentalRating(CalculateRatingRequest) returns (CalculateRatingResponse) {}
}